@@ -290,17 +290,8 @@
                                     <arg line="--main-jar opendolphin.jar" />
                                     <arg line="--runtime-image ${java.jre.dir}" />
                                     <arg line="--resource-dir ${java.jpackage.resource.dir}" />?
-                                    <arg line="--java-options --add-opens=java.desktop/javax.swing=ALL-UNNAMED" />
                                     <arg line="--java-options --add-opens=java.desktop/javax.swing.undo=ALL-UNNAMED" />
-                                    <arg line="--java-options --add-opens=java.desktop/javax.accessibility=ALL-UNNAMED" />
-                                    <arg line="--java-options --add-opens=java.desktop/java.beans=ALL-UNNAMED" />
-                                    <arg line="--java-options --add-opens=java.desktop/sun.awt=ALL-UNNAMED" />
-                                    <arg line="--java-options --add-opens=java.base/java.lang=ALL-UNNAMED" />
-                                    <arg line="--java-options --add-opens=java.base/java.lang.ref=ALL-UNNAMED" />
-                                    <arg line="--java-options --add-opens=java.base/java.security=ALL-UNNAMED" />
                                     <arg line="--java-options -XX:+UseZGC" />
-                                    <!--<arg line="--> <!--java-options -Xmx1024m" /> -->
-                                    <!--<arg line="--> <!--java-options -Xlog:gc:file=${user.home}/Library/Logs/jvm-gc.log:utctime,pid:filecount=1,filesize=10m" /> -->
                                     <arg line="--java-options -Dopen.dolphin.build.timestamp=${buildDate}" />
                                 </exec>
                             </target>
